--- a/table/tabelGapEA.tex
+++ b/table/tabelGapEA.tex
@@ -45,20 +45,20 @@ Perbedaan cara kerja antar tim dan belum ada mekanisme kontrol penerapan proses.
 \textbf{\textit{Architecture Development}} &
 TRM dan \textit{standards profile} sudah lengkap. Selain itu, \textit{gap analysis} dan rencana migrasi juga sudah selesai dibuat. &
 \textit{Domain} bisnis dan aplikasi mulai terdokumentasi sejak awal. Sementara itu, \textit{domain} data, infrastruktur, dan keamanan terdokumentasi sambil berjalannya suatu inisiatif. &
-Dokumentasi belum dilakukan sejak tahap inisiasi untuk semua domain. &
+Dokumentasi belum dilakukan sejak tahap inisiasi untuk semua \textit{domain}. &
 Belum semua \textit{domain} memiliki kebiasaan dokumentasi awal. \\
 
 \textbf{\textit{Business Alignment}} &
 AE sudah menjadi bagian dari proses perencanaan investasi dan pengendalian proyek. &
-\textit{Business Architect} aktif selaraskan kebutuhan TI dan bisnis. Namun, beberapa keputusan masih berdasar kebutuhan operasional. &
-AE belum menjadi acuan wajib untuk seluruh proyek atau investasi TI. &
-Belum ada aturan formal bahwa semua investasi TI harus melewati analisis AE. \\
+\textit{Business Architect} aktif selaraskan kebutuhan TI dan bisnis. Namun beberapa tim tidak selalu melewati proses analisis EA dan tidak memberitahukan tim EA. &
+Kepatuhan belum sempurna karena beberapa investasi/proyek tetap berjalan tanpa proses analisis EA yang lengkap. & 
+Pengawasan dan mekanisme penegakan masih lemah. Selain itu proses koordinasi tidak selalu diikuti oleh beberapa tim \\
 
 \textbf{\textit{Organization}} &
 Manajemen memberikan dukungan penuh dan keterlibatan lintas unit berjalan secara berkelanjutan dan kolaboratif. &
 Struktur peran sudah ditetapkan dengan jelas. Namun, belum dilakukan secara proaktif tanpa dorongan konteks tertentu. &
-Kolaborasi belum menjadi kebiasaan natural lintas unit. &
-Kolaborasi lebih sering muncul pada konteks atau inisiatif berdampak besar. \\
+Kolaborasi lintas unit belum sepenuhnya menjadi kebiasaan proaktif di semua konteks. &
+Belum ada mekanisme atau kebiasaan kerja yang mendorong kolaborasi lintas unit secara otomatis dan koordinasi lebih sering muncul setelah ada kebutuhan yang memicu. \\
 
 \textbf{\textit{Architecture Governance}} &
 Tata kelola sudah terdokumentasi dan mencakup sebagian besar investasi TI dan adanya mekanisme pengecualian resmi (\textit{waiver}). &
@@ -70,7 +70,7 @@ Ketiadaan ARB aktif, tidak ada aturan wajib, dan budaya kepatuhan belum kuat. \\
 \textbf{\textit{Architecture Communication}} &
 Dokumentasi arsitektur diperbarui secara berkala dan dikomunikasikan secara rutin ke tim TI dan bisnis. &
 SAP LeanIX sudah digunakan sebagai sumber referensi utama untuk dokumen arsitektur, dan pembaruan dokumen mulai dilakukan secara rutin.&
-Komunikasi EA belum merata ke seluruh unit. &
-Penyebaran informasi masih dominan teknis dan belum ada mekanisme komunikasi terstruktur. \\
+-- Tidak teridentifikasi gap signifikan berdasarkan data saat ini -- &
+-- Tidak ada faktor penyebab yang perlu dicatat karena kondisi aktual sejauh ini konsisten dengan indikator Level 3. \\
 
 \end{longtable}
