--- a/Bab IV - Desain-Konsep-Solusi.tex
+++ b/Bab IV - Desain-Konsep-Solusi.tex
@@ -3,7 +3,27 @@
 % ==========================================
 \chapter{DESAIN KONSEP SOLUSI}
 \label{chap:desain-konsep-solusi}
-Ilustrasikan desain konsep solusi dalam bentuk model konseptual dan penjelasan secara ringkas, 
-beserta perbedaannya dengan sistem saat ini. Ilustrasi harus dapat dibandingkan (\textit{before} and \textit{after}). 
-Karena masih berupa proposal, bab ini hanya berisi gambar desain konsep solusi tersebut dan 
-penjelasan perbandingannya dengan gambar sistem yang ada saat ini (yang tergambar di awal Bab \ref{chap:analisis-masalah}).
+\section{Gambaran Umum Solusi}
+Berdasarkan kondisi aktual yang telah dijelaskan dalam Bab III, Paragon Corp menerapkan alur tata kelola AE yang terdiri dari 5 tahap, yaitu \textit{Ideation, Risk and Impact, Development, UAT and Go Live} dan \textit{Hypercare}.
+Dalam alur ini, proses \textit{EA Impact Analysis} dilakukan pada tahap \textit{Risk and Impact} dan finalisasi arsitektur pada tahap \textit{UAT and Go Live}.
+Mengacu ke referensi TOGAF, nantinya proses \textit{EA Impact Analysis} akan dilakukan dan langsung finalisasi pada tahap \textit{Risk and Impact}.
+Sementara itu, tahapan \textit{Development} akan dimulai setelah seluruh arsitektur telah melakukan analisis.
+Perubahan ini mengacu ke TOGAF yang menyatakan bahwa analisis dan keputusan arsitektur dilakukan sebelum perusahaan memasuki fase implementasi.
+
+SAP LeanIX akan menjadi komponen kunci dalam solusi sebagai alat dokumentasi, repositori resmi, sumber untuk menganalisis dampak, dan pendukung visualisasi hubungan antar \textit{domain}.
+Peran LeanIX dalam model solusi ini selaras dengan TOGAF yang mengatur bahwa \textit{Architecture Repository} harus berfungsi sebagai penyimpanan artefak arsitektur \autocite{TOGAF_Standard_10th}.
+
+Solusi yang diusulkan yaitu SOP \textit{EA Impact Analysis} yang mencakup:
+\begin{enumerate}
+    \item Standarisasi proses \textit{EA Impact Analysis} pada tahap proses tata kelola AE saat ini.
+    \item Seluruh artefak setiap \textit{domain} akan di finalisasi pada tahapan \textit{Risk and Impact} agar selaras dengan prinsip TOGAF.
+    \item Penguatan peran SAP LeanIX sebagai repositori tunggal.
+    \item Pemetaan proses ke tahapan tata kelola AE Paragon Corp agar solusi dapat dibandingkan dengan kondisi saat ini.
+    \item Pengembangan model konseptual SOP.
+  \end{enumerate}
+
+\section{Desain Konsep \textit{SOP EA Impact Analysis}}
+xx
+
+\section{Perbandingan Sistem Saat Ini dan Desain Konsep Solusi}
+xx
