--- a/table/tabelDecisionMatrix.tex
+++ b/table/tabelDecisionMatrix.tex
@@ -1,20 +1,23 @@
-\begin{table}[t]
+\begin{table}[h]
     \centering
-    \begin{tabular}{|p{4cm}|p{1.5cm}|p{1.6cm}|p{1.2cm}|p{1.2cm}|}
+    \begin{tabular}{|p{4cm}|p{2cm}|p{2cm}|p{2cm}|p{2cm}|}
     \hline
-    \textbf{Kriteria} & \textbf{Bobot (\%)} & \textbf{PMBOK+TOGAF} & \textbf{COBIT} & \textbf{ITIL} \\
+    \textbf{Kriteria} & \textbf{Bobot (\%)} & \textbf{Alternatif 1} & \textbf{Alternatif 2} & \textbf{Alternatif 3} \\
     \hline
-    Struktur governance        & 20 & 5 & 4 & 3 \\
-    Kemudahan implementasi     & 15 & 3 & 4 & 5 \\
-    Alignment dengan bisnis    & 20 & 5 & 3 & 2 \\
-    Efisiensi operasional      & 15 & 4 & 3 & 5 \\
-    Fleksibilitas adaptasi     & 15 & 5 & 3 & 3 \\
-    Kontrol dan audit          & 15 & 4 & 5 & 3 \\
+    Kesesuaian dengan Tata Kelola EA & 30 & 5 & 3 & 4 \\
     \hline
-    \textbf{Total nilai}       & \textbf{100} & \textbf{4.4} & \textbf{3.7} & \textbf{3.4} \\
+    Kemudahan Implementasi & 20 & 3 & 5 & 3 \\
+    \hline
+    Dampak terhadap Konsistensi Proses & 25 & 5 & 3 & 4 \\
+    \hline
+    Kebutuhan Koordinasi Antar Unit & 15 & 4 & 5 & 3 \\
+    \hline
+    Kesesuaian dengan SAP LeanIX & 10 & 5 & 3 & 3 \\
+    \hline
+    \textbf{Total nilai}       & \textbf{100} & \textbf{4.45} & \textbf{3.75} & \textbf{3.55} \\
     \hline
     \end{tabular}
-    \caption{\textit{Decision Matrix} Penentuan Alternatif Solusi Tata Kelola EA}
+    \caption{\textit{Decision Matrix} Penentuan Alternatif Solusi Perbaikan Proses \textit{EA Impact Analysis}}
     \label{tbl:decision_matrix_EA}
     \end{table}
     
