--- a/ProposalTA.tex
+++ b/ProposalTA.tex
@@ -163,12 +163,12 @@
 % -- No Header dan No Footer ---
 \pagestyle{plain}
 
-% --- Ubah nama daftar listing ke "DAFTAR KODE" ---
-% --- Harus diletakkan sebelum \begin{document} ---
-\renewcommand{\lstlistlistingname}{\centering\normalsize DAFTAR KODE} 
-\renewcommand{\lstlistingname}{Kode}
-\lstset{basicstyle=\ttfamily\footnotesize,breaklines=true}
-%\captionsetup[lstlisting]{justification=raggedright,singlelinecheck=false}
+% % --- Ubah nama daftar listing ke "DAFTAR KODE" ---
+% % --- Harus diletakkan sebelum \begin{document} ---
+% \renewcommand{\lstlistlistingname}{\centering\normalsize DAFTAR KODE} 
+% \renewcommand{\lstlistingname}{Kode}
+% \lstset{basicstyle=\ttfamily\footnotesize,breaklines=true}
+% %\captionsetup[lstlisting]{justification=raggedright,singlelinecheck=false}
 
 
 \renewcommand \cftchapdotsep{4.5}
@@ -351,10 +351,10 @@
 \addcontentsline{toc}{chapter}{DAFTAR TABEL}
 
 % --- DAFTAR LISTING (ALGORITMA, PSEUDOCODE, SOURCE CODE) ---
-\newpage
+% \newpage
 
-\lstlistoflistings
-\addcontentsline{toc}{chapter}{\lstlistlistingname}
+% \lstlistoflistings
+% \addcontentsline{toc}{chapter}{\lstlistlistingname}
 
 \mainmatter
 % --- FORMAT TAMPILAN JUDUL BAB, SUBBAB, JUDUL GAMBAR DAN TABEL ---
